FIx frontend error

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <base href="/">
   <style>
     body {
-      background-color: cyan;}
+      background-color: rgb(27, 27, 27);}
   </style>
 </head>
 <body>
